[project]
name = "howaboutno"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beartype>=0.22.9",
    "cachetools>=6.2.6",
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "requests>=2.32.5",
    "starlette>=0.50.0",
    "uvicorn>=0.40.0",
]

[tool.poetry.scripts]
howaboutno = "src.howaboutno.create_config:create_config"
