[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/howaboutno"]

[project]
name = "howaboutno"
version = "0.1.0"
description = "An open source ASGI middleware designed to block unwanted traffic on web apps."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beartype>=0.22.9",
    "cachetools>=6.2.6",
    "httpx>=0.28.1",
]

[project.scripts]
howaboutno = "howaboutno.create_config:create_config"