[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/howboutno"]

[project]
name = "howboutno"
version = "0.1.4"
description = "An open source ASGI middleware designed to block unwanted traffic on web apps."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beartype>=0.22.9",
    "cachetools>=6.2.6",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
]

[project.scripts]
howboutno = "howboutno.create_config:create_config"
